--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>hoo im from chennai</h1>
+<!--      --> is a comment lines
+    
 </head>
 <body>
     <h1></h1>
